# tsp_rl_gym

./: .gitignore  README.md  pyproject.toml  run_ga_verification.py
examples/: run_ga_solver.py
outputs/GA/20250809-200326_random20_seed42/: config.json  summary.txt
tests/: test_data_loader.py  test_ga_operators.py  test_ga_solver.py  test_operator_env.py  test_operator_env.py.disabled  test_pbrs.py  test_reversal_guard.py  test_scorer.py  test_utils.py  test_visualizer.py
tsp_rl_gym/baselines/: ga_solver.py
tsp_rl_gym/data/tsplib/: ulysses16.tsp
tsp_rl_gym/envs/: __init__.py  core_scorer.py  operator_env.py
tsp_rl_gym/solvers/: __init__.py  ga_operators.py  ga_solver.py
tsp_rl_gym/utils/: __init__.py  data_loader.py  logging.py  plotting.py  tsp_ops.py  visualizer.py
